--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js -e js,css,hbs"
+    "start": "nodemon server.js -e hbs,js,css",
+    "server-dev": "nodemon server.js -e js,css,hbs",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run start\" \"npm run client\" "
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,8 @@
   },
   "homepage": "https://github.com/Vulpie/tilemap_creator#readme",
   "dependencies": {
+    "concurrently": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "hbs": "^4.1.0"
   },
