--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js -e hbs,js,css",
+    "start": "node index.js",
     "server-dev": "nodemon server.js -e js,css,hbs",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run start\" \"npm run client\" "
+    "dev": "concurrently \"npm run start\" \"npm run client\" ",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "repository": {
     "type": "git",
