--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node server.js",
     "server-dev": "nodemon server.js -e js,css,hbs",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\" ",
