--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server-dev": "nodemon server.js -e js,css,hbs",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\" ",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
