--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Map editor for creating tile maps",
   "main": "server.js",
   "engines":{
-    "node": "12.14.1"
+    "node": "12.14.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "node server.js",
