--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server-dev": "nodemon server.js -e js,css,hbs",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\" ",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "build": "cd react-ui/ && npm install && npm run build"
   },
   "repository": {
     "type": "git",
