--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server-dev": "nodemon server.js -e js,css,hbs",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\" ",
-    "build": "cd react-ui/ && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "repository": {
     "type": "git",
