feat: add swagger to test api routes

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "tile_map_creator",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Map editor for creating tile maps",
   "main": "server.js",
-  "engines":{
+  "engines": {
     "node": "12.14.x",
     "npm": "6.x"
   },
@@ -28,7 +28,9 @@
     "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "hbs": "^4.1.0"
+    "hbs": "^4.1.0",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
