--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server.js",
     "server-dev": "nodemon server.js -e js,css,hbs",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run start\" \"npm run client\" ",
+    "dev": "concurrently \"npm run server-dev\" \"npm run client\" ",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "repository": {
